--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 */
-@import url(http://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic,300bold,700bold);
+@import url(http://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
 
 .vcard {
     width: 100%;
