--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 */
-@import url('http://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic');
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
 
 /* @import "reset"; */
 /* http://meyerweb.com/eric/tools/css/reset/ */
