Open links to external pages in a new tab.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <div class="header">
             <div class="myheader"><h1>{{ site.name }}</h1>
             <!--    <br /><span> -->
-                    <a class="header__subtitle" href="{{ site.twitter }}">{{site.twitter_handle}}</a>
+                    <a class="header__subtitle" target="_blank" href="{{ site.twitter }}">{{site.twitter_handle}}</a>
             <!--    </span>-->
             </div>
 
