--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,13 +69,11 @@ $br: 600px;
     padding: 0px;
 	margin-bottom: 40px;
 }
-.mypic {
-    width: 220px;
-    height: 210px;
+.contactleft {
+    width: 50%;
     float: left;
-
 }
-.address {
+.contactright {
     margin-left: 15%;
 }
 
