Test other layout for contact address.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -68,6 +68,8 @@ $br: 600px;
     margin: auto;
     padding: 0px;
 	margin-bottom: 40px;
+	font-size: 1em;
+	line-height: 150%;
 }
 .contactleft {
     width: 50%;
