--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,21 +5,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     {% if page.title %}
-        <title>{{ page.title }}</title>
+        <title>{{ site.title}} -- {{ page.title }}</title>
     {% else %}
-        <title>{{ site.name }}</title>
+        <title>{{ site.title}} --{{ site.name }}</title>
     {% endif %}
-
     <meta name="description" content="{{ site.description }}">
-
-    {% if site.google_verification %}
-        <meta name="google-site-verification" content="{{ site.google_verify }}">
-    {% endif %}
 
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-91438592-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 
 <body>
