--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,10 @@
         </div>
 
         {{ content }}
+
+        <div class="impressum"><a href="/impressum">Impressum</a></div>
     </div>
+
 
 </body>
 
