--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -409,3 +409,12 @@ blockquote {
 		}
 	}
 }
+
+.impressum {
+	padding-top: 40px;
+	text-align: center;
+	font-size: 0.8em;
+	a {
+		color: $color-hire-blue;
+	}
+}
