Extend description in metadata.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
     <meta property="og:title" content="{{ site.title }}">
     <link rel="canonical" href="{{ site.url }}">
     <meta property="og:url" content="{{ site.url }}">
-    <meta property="og:description" content="Research Website by {{ site.title }}">
+    <meta property="og:description" content="{{ site.description }}">
     <script type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "person", "name" : "{{ site.title }}", "url" : "{{site.url}}", "sameAs" : null } </script>
     <!-- SEO -->
-    
+
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
