--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,9 @@
 
         {{ content }}
 
-        <div class="impressum"><a href="/impressum">Impressum</a></div>
+        <div class="impressum"><a href="/impressum">Impressum</a>,
+        <a href="/attribution">Attribution</a>
+        </div>
     </div>
 
 
