Add new pic and cleanup.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -413,9 +413,9 @@ blockquote {
 	padding-top: 40px;
 	text-align: center;
 	font-size: 0.8em;
-	color: $color-hire-blue;
+	color: $color-link;
 	a {
-		color: $color-hire-blue;
+		color: $color-link;
 	}
 }
 
