--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,9 +60,7 @@
 
         {{ content }}
 
-        <div class="impressum"><a href="/impressum">Impressum</a>,
-        <a href="/attribution">Attribution</a>
-        </div>
+        <div class="impressum"><a href="/impressum">Impressum</a></div>
     </div>
 
 
