Change name of link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 
         {{ content }}
 
-        <div class="impressum"><a href="/impressum">Impressum</a></div>
+        <div class="impressum"><a href="/impressum">Impressum/Datenschutz</a></div>
     </div>
 
 
