--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -311,6 +311,7 @@ blockquote {
 		font-weight: 500;
 		margin-top: 20px;
 		margin-bottom: 10px;
+		line-height: 1.12;
 	}
 	&__content {
 		margin-top: 20px;
@@ -340,6 +341,7 @@ blockquote {
 		font-weight: 500;
 		margin-top: 20px;
 		margin-bottom: 10px;
+		line-height: 1.12;
 	}
 	&__content {
 		margin-top: 20px;
@@ -383,6 +385,7 @@ blockquote {
 		font-weight: 500;
 		margin-top: 20px;
 		margin-bottom: 10px;
+		line-height: 1.12;
 	}
 	&__content {
 		margin-top: 20px;
