--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -370,6 +370,12 @@ blockquote {
 			margin-top: 30px;
 			margin-bottom: 5px;
 		}
+		h3 {
+			font-size: 1em;
+			font-weight: 600;
+			margin-top: 15px;
+			margin-bottom: 5px;
+		}
 		p {
 			font-size: 1em;
 			line-height: 125%;
