--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -343,7 +343,14 @@ blockquote {
 		p {
 			font-size: 1em;
 			line-height: 150%;
-			margin-bottom: 5px;
+			margin-bottom: 15px;
+		}
+		li {
+			line-height: 125%;
+			margin-top: -5px;
+		}
+		ul {
+			margin-top: -15px;
 		}
 	}
 }
