--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,16 @@
         ga('send', 'pageview');
     </script>
   -->
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91438592-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-91438592-1');
+    </script>
+
 </head>
 
 <body>
