--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,6 +4,9 @@
 /*
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif');
+in body tag:	font-family: 'PT Sans', 'DejaVu Sans', Verdana, sans-serif;
 */
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
 
