--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div class="home">
-    <div class="home__content">
+<div class="page">
+    <div class="page__content">
         {{ content }}
     </div>
 </div>
