--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,17 +1,16 @@
 ---
 ---
 
+@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif');
+
 /*
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif');
-in body tag:	font-family: 'PT Sans', 'DejaVu Sans', Verdana, sans-serif;
 */
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
-
 /* @import "reset"; */
 /* http://meyerweb.com/eric/tools/css/reset/ */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -67,11 +66,11 @@ $br: 600px;
 /* END CONFIG */
 
 .vcard {
-    width: 100%;
+  width: 100%;
 	margin: auto;
-    padding: 0px;
+  padding: 0px;
 	font-size: 1em;
-	line-height: 150%;
+	line-height: 120%;
 }
 .contactleft {
     width: 50%;
@@ -85,9 +84,11 @@ $br: 600px;
 body {
 	color: $color-black;
 	background: $color-white;
-	font-family: Roboto;
+  /*font-family: Roboto;
+	font-weight: 400;*/
+	font-family: 'PT Sans', 'DejaVu Sans', Verdana, sans-serif;
 	font-size: 100%;
-	font-weight: 400;
+
 }
 h1 {
 	margin-bottom: 5px;
@@ -101,7 +102,7 @@ h2 {
 }
 p {
 	font-size: 1em;
-	line-height: 150%;
+	line-height: 125%;
 	margin-bottom: 10px;
 }
 strong {
@@ -132,10 +133,10 @@ ul {
 	list-style: disc;
 	padding-left: 20px;
 	li {
-        padding: 5px;
+    padding: 2px;
 		padding-left: 1px;
 		@media screen and (max-width: $br) {
-			padding: 10px 0 10px 0;
+		padding: 10px 0 10px 0;
 		}
 	}
 }
@@ -180,7 +181,7 @@ blockquote {
 		display: block;
 	}
 	h1 {
-		font-size: 2.5em;
+		font-size: 2em;
 		margin-bottom: 5px;
 	}
 	&__subtitle {
@@ -197,6 +198,76 @@ blockquote {
 	}
 }
 
+.page {
+	&__title {
+		font-size: 1.6em;
+		font-weight: 600;
+		margin-top: 20px;
+		margin-bottom: 10px;
+		line-height: 120%;
+	}
+	&__content {
+		margin-top: 20px;
+		h1 {
+			font-size: 1.6em;
+			font-weight: 600;
+			margin-top: 20px;
+			margin-bottom: 10px;
+			line-height: 120%;
+		}
+		h2 {
+			font-size: 1.2em;
+			font-weight: 400;
+			margin-top: 30px;
+			margin-bottom: 10px;
+		}
+		h3 {
+			font-size: 1em;
+			font-weight: 600;
+			margin-top: 15px;
+			margin-bottom: 5px;
+		}
+		p {
+			font-size: 1em;
+			line-height: 115%;
+			margin-bottom: 15px;
+		}
+		li {
+			line-height: 115%;
+		}
+		ul {
+			margin-top: 0px;
+		}
+		.bibtex {
+			font-size: .8em;
+			line-height: 125%;
+			font-family: monospace;
+			word-wrap: break-word;
+			background-color: rgb(248, 248, 248);
+			border: 1px dashed;
+			overflow-x: scroll;
+			margin: 10px;
+			padding: 10px;
+		}
+	}
+}
+
+.impressum {
+	padding-top: 40px;
+	text-align: center;
+	font-size: 0.8em;
+	color: $color-link;
+	a {
+		color: $color-link;
+	}
+}
+
+.acmdlitem {font-family: Roboto;
+		color: $color-black; font-size: 1em;}
+
+
+/* BLOGGING NOT USED */
+/*
 .blog {
 	padding-bottom: 30px;
 	h1 {
@@ -320,135 +391,4 @@ blockquote {
 		}
 	}
 }
-
-.page {
-	&__title {
-		font-size: 1.6em;
-		font-weight: 500;
-		margin-top: 20px;
-		margin-bottom: 10px;
-		line-height: 1.12;
-	}
-	&__content {
-		margin-top: 20px;
-		h1 {
-			font-size: 1.6em;
-			font-weight: 500;
-			margin-top: 20px;
-			margin-bottom: 10px;
-		}
-		h2 {
-			font-size: 1.2em;
-			font-weight: 600;
-			margin-top: 30px;
-			margin-bottom: 5px;
-		}
-		p {
-			font-size: 1em;
-			line-height: 150%;
-			margin-bottom: 15px;
-		}
-		li {
-			line-height: 125%;
-		}
-		ul {
-			margin-top: -15px;
-		}
-	}
-}
-
-.paper {
-	&__title {
-		font-size: 1.6em;
-		font-weight: 500;
-		margin-top: 20px;
-		margin-bottom: 10px;
-		line-height: 1.12;
-	}
-	&__content {
-		margin-top: 20px;
-		h1 {
-			font-size: 1.6em;
-			font-weight: 500;
-			margin-top: 20px;
-			margin-bottom: 10px;
-		}
-		h2 {
-			font-size: 1.2em;
-			font-weight: 600;
-			margin-top: 30px;
-			margin-bottom: 5px;
-		}
-		h3 {
-			font-size: 1em;
-			font-weight: 600;
-			margin-top: 15px;
-			margin-bottom: 5px;
-		}
-		p {
-			font-size: 1em;
-			line-height: 125%;
-			margin-bottom: 10px;
-		}
-		li {
-			line-height: 125%;
-		}
-		.bibtex {
-			font-size: .8em;
-			line-height: 125%;
-			font-family: monospace;
-			word-wrap: break-word;
-			background-color: rgb(248, 248, 248);
-			border: 1px dashed;
-			overflow-x: scroll;
-			margin: 10px;
-			padding: 10px;
-		}
-	}
-}
-
-.home {
-	&__title {
-		font-size: 1.6em;
-		font-weight: 500;
-		margin-top: 20px;
-		margin-bottom: 10px;
-		line-height: 1.12;
-	}
-	&__content {
-		margin-top: 20px;
-		h1 {
-			font-size: 1.6em;
-			font-weight: 500;
-			margin-top: 20px;
-			margin-bottom: 10px;
-		}
-		h2 {
-			font-size: 1.2em;
-			font-weight: 600;
-			margin-top: 30px;
-			margin-bottom: 5px;
-		}
-		p {
-			font-size: 1em;
-			line-height: 150%;
-			margin-bottom: 0px;
-		}
-		li {
-			line-height: 125%;
-		}
-	}
-}
-
-.impressum {
-	padding-top: 40px;
-	text-align: center;
-	font-size: 0.8em;
-	color: $color-link;
-	a {
-		color: $color-link;
-	}
-}
-
-.acmdlitem {font-family: Roboto;
-		color: $color-black; font-size: 1em;}
+*/
