--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,10 @@
 ---
 ---
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,300,600"');
 
 /*
+@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif');
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,700,300italic,700italic);
 @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
@@ -40,7 +41,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	line-height: 150%;
 }
 table {
 	border-collapse: collapse;
@@ -70,7 +71,7 @@ $br: 600px;
 	margin: auto;
   padding: 0px;
 	font-size: 1em;
-	line-height: 120%;
+	line-height: 150%;
 }
 .contactleft {
     width: 50%;
@@ -84,9 +85,9 @@ $br: 600px;
 body {
 	color: $color-black;
 	background: $color-white;
-  /*font-family: Roboto;
-	font-weight: 400;*/
-	font-family: 'PT Sans', 'DejaVu Sans', Verdana, sans-serif;
+  font-family: Raleway;
+	font-weight: 400;
+	/*font-family: 'PT Sans', 'DejaVu Sans', Verdana, sans-serif;*/
 	font-size: 100%;
 
 }
@@ -102,7 +103,7 @@ h2 {
 }
 p {
 	font-size: 1em;
-	line-height: 125%;
+	line-height: 150%;
 	margin-bottom: 10px;
 }
 strong {
@@ -204,7 +205,7 @@ blockquote {
 		font-weight: 600;
 		margin-top: 0px;
 		margin-bottom: 10px;
-		line-height: 120%;
+		line-height: 150%;
 	}
 	&__content {
 		margin-top: 0px;
@@ -213,7 +214,7 @@ blockquote {
 			font-weight: 600;
 			margin-top: 20px;
 			margin-bottom: 10px;
-			line-height: 120%;
+			line-height: 150%;
 		}
 		h2 {
 			font-size: 1.2em;
@@ -228,15 +229,14 @@ blockquote {
 			margin-bottom: 5px;
 		}
 		p {
-			font-size: 1em;
-			line-height: 115%;
 			margin-bottom: 15px;
 		}
 		li {
-			line-height: 115%;
+			line-height: 150%;
+			margin-bottom: 5px;
 		}
 		ul {
-			margin-top: 0px;
+			margin-top: 5px;
 		}
 		.bibtex {
 			font-size: .8em;
