--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -98,8 +98,9 @@ h1 {
 h2 {
 	margin-bottom: 15px;
 	margin-top: 15px;
-	font-size: 150%;
+	font-size: 1.5;
 	font-weight: bold;
+	line-height: 1.5;
 }
 p {
 	font-size: 1em;
@@ -217,13 +218,13 @@ blockquote {
 			line-height: 150%;
 		}
 		h2 {
-			font-size: 1.2em;
+			font-size: 1.6em;
 			font-weight: 400;
 			margin-top: 30px;
 			margin-bottom: 10px;
 		}
 		h3 {
-			font-size: 1em;
+			font-size: 1.25em;
 			font-weight: 600;
 			margin-top: 15px;
 			margin-bottom: 5px;
