--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,16 @@
       gtag('config', 'UA-91438592-1');
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1Y94XZ0F2M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1Y94XZ0F2M');
+  </script>
+
 </head>
 
 <body>
