--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,24 +25,14 @@
     <link rel="icon" href="/assets/img/favicon.png">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
-    <!--
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-91438592-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-  -->
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91438592-1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L6XK6C29QF"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-91438592-1');
+      gtag('config', 'G-L6XK6C29QF');
     </script>
 
 </head>
