--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
             <div class="myheader"><h1>{{ site.name }}</h1>
             <!--    <br /><span> -->
                     <a class="header__subtitle" target="_blank" href="{{ site.twitter }}">{{site.twitter_handle}}</a>
-                    // <a class="header__subtitle" target="_blank" href="{{ site.mastodon }}">{{site.mastodon_handle}}</a>
+                    |<a class="header__subtitle" target="_blank" href="{{ site.mastodon }}">{{site.mastodon_handle}}</a>
             <!--    </span>-->
             </div>
 
