Restructure and update 1st page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
       gtag('config', 'G-L6XK6C29QF');
     </script>
 
+    <!-- icons -->
+    <script src="https://kit.fontawesome.com/6ab1a72f26.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -42,13 +44,14 @@
     <div class="wrapper">
         <div class="header">
             <div class="myheader"><h1>{{ site.name }}</h1>
-            <!--    <br /><span> -->
-            <!--
-                    <a class="header__subtitle" target="_blank" href="{{ site.twitter }}">{{site.twitter_handle}}</a>
-                    |<a class="header__subtitle" target="_blank" href="{{ site.mastodon }}">{{site.mastodon_handle}}</a>
-            -->
-            <!--    </span>-->
-            </div>
+                <!-- <div style="padding-bottom: .1cm; padding-left: .1cm;">
+                       <span style="font-size: 1em; color: #0085ff; padding-top: 1cm;">
+                            <i class="fa-brands fa-bluesky"></i>
+                            <a class="" target="_blank" href="{{site.bluesky}}">{{site.bluesky_handle}}</a>
+                        </span> 
+                    </div>
+                -->
+            </div> 
 
             <!--<h1>{{ site.name }}</h1>-->
 
