Change favicon continued.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,13 @@
     <script type="application/ld+json"> { "@context" : "http://schema.org", "@type" : "person", "name" : "{{ site.title }}", "url" : "{{site.url}}", "sameAs" : null } </script>
     <!-- SEO -->
 
-    <link rel="icon" href="/assets/img/favicon.png">
+    <!-- <link rel="icon" href="/assets/img/favicon.png"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/fav/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/fav/site.webmanifest">
+
+
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
