--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -96,7 +96,8 @@ table {
 $color-black: #272727;
 $color-white: #FFFFFF;
 $color-grey: #EEEEEE;
-$color-link: #1A0DAB;
+// $color-link: #1A0DAB;
+$color-link: #0051ff;
 $color-code: #00FF00;
 $color-hire-white: #FEFEFE;
 $color-hire-black: #272727;
