Make site title a link to home.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 
     <div class="wrapper">
         <div class="header">
-            <div class="myheader"><h1>{{ site.name }}</h1>
+            <div class="myheader"><h1><a href="/">{{ site.name }}</a></h1>
                 <!-- <div style="padding-top: .2cm; padding-left: .1cm;">
                        
                     </div>
